Fixed an exploit that allows script execution

--- a/gateway/Caddyfile
+++ b/gateway/Caddyfile
@@ -7,12 +7,18 @@ localhost {
         reverse_proxy http://discord-bot:5000
     }
 
-	handle_path /storage-console/* {
-		reverse_proxy http://object-storage:9001
-	}
+    handle_path /storage-console/* {
+        reverse_proxy http://object-storage:9001
+    }
 
     handle_path /storage/* {
         reverse_proxy http://object-storage:9000
+
+        header {
+            Content-Security-Policy "default-src 'none'; img-src 'self'; object-src 'none';"
+            X-Content-Type-Options "nosniff"
+            X-Frame-Options "DENY"
+        }
     }
 
     handle /favicon.ico {
